# lmeval

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
web/: README.md  build_deploy.sh  db.sqlite3  manage.py
web/evaluation/: models.py  serializers.py  urls.py  views.py
web/evaluation/migrations/: 0001_initial.py  0002_dataset_datasetitem.py
web/frontend/: .eslintrc.js  vue.config.js
web/frontend/public/: index.html
web/frontend/src/: App.vue  main.js  router.js
web/frontend/src/components/: CreateDatasetForm.vue  CreateTaskForm.vue  DatasetDetail.vue  DatasetList.vue  TaskList.vue  TaskResults.vue
web/lmeval_web/: asgi.py  settings.py  urls.py  wsgi.py
web/static/frontend/: index.html
web/static/frontend/css/: app.css
web/static/frontend/js/: app.js  app.js.map  chunk-vendors.js
web/templates/: index.html
